--- a/content/post/2020-06-29-begin-the-fugue-part-ii.Rmd
+++ b/content/post/2020-06-29-begin-the-fugue-part-ii.Rmd
@@ -1,7 +1,7 @@
 ---
 title: Begin the Fugue, Part II
 author: ~
-date: '2020-06-29'
+date: '2020-06-30'
 slug: begin-the-fugue-part-ii
 categories: []
 tags: []
@@ -25,11 +25,15 @@ When the goal of the teaching is unabashedly “be useful in a neoliberal vocati
 I want to be very clear that I do not think that this approach should be the default goal of education (even though that is the new constant pressure), but now having experienced living in this bizarro world where success is defined solely by employment I now have a lot more opinions about the “value/values” demarcation in education.
 In many ways, I very much agree with many goals of Flatiron in that there is a huge hole in the way things are set up now for vocational job training that doesn’t fit the traditional guild/apprentice model (electrician, plumber) and there should be more opportunities for people to accomplish this if they want.
 This is especially true if it will lead to a marked difference in quality of life when it comes to their income.
-It makes me very happy to have worked for a company that has allocated [scholarship money for those that are underrepresented in tech](https://flatironschool.com/access/) and to have been able to pass on those opportunities to people I know personally.
+No one told me that working in tech can lead to such and it's especially wrong for that field to have  been dominated by white men for so long.
+This [absurdly large differences in income](https://insights.stackoverflow.com/survey/2020) has been benefiting people (white dudes) in  tech for  a long  time, and opening it up to others via education is imporant.
+t makes me very happy to have worked for a company that has made this a  priority and has allocated [scholarship money for those that are underrepresented in tech](https://flatironschool.com/access/) and to have been able to pass on those opportunities to people I know personally.
 
 Of course the idealist in me would go so far as to try to steer the next part of this conversation away from idea of social mobility (why don’t we just pay people all more than living wages and avoid classist ideas that value white collar above blue collar work) but the realist in me knows that this structure is entrenched in Western society right now so if there is a way to open the door to making more money and better quality of life for people through work, then people who can open that door need to open it as wide as humanly possible.
 
-Reflecting on the vocational versus liberal arts really has me thinking about that and what the future of what higher education will be.
+## Emulating Ideas from Vocational Education
+
+Reflecting on the vocational versus liberal arts really has me thinking about that and what the future of what higher education could be.
 Many of my academic colleagues know the pressure of being asked to demonstrate “transferable skills” in their curricula.
 Students rightly want to be able to make a living for themselves when they graduate. 
 
@@ -38,7 +42,7 @@ But if we just follow the job market and placements as our only metric for succe
 Now I don’t want to fall prey to Rule Number 2 of grad school (“Be on the lookout for false dichotomies”) thinking we can’t have both, but as more pressure is put on higher education to use employment as a [KPI](https://www.google.com/search?q=kpi&oq=kpi&aqs=chrome..69i57j0l6j46.664j0j4&sourceid=chrome&ie=UTF-8) (a new term I learned this year) there is a lot higher ed can and should take from the vocational/bootcamp model. 
 If so much can be accomplished in so little time that can lead to better chances at employment, I am sure there is time during a four year undergraduate degree to equip them with what they need for employment (if they want to do this) that is not just a few resume review sessions. 
 
-I know this might not be as big of a deal for some of my STEM colleagues or students, but I do think about what this would look like if there was some sort of vocational option for music students.
+I know this might not be as big of a deal for some of my STEM colleagues or students, but I do think about what this would look like if there was some sort of vocational option for music students (my  home field).
 The irony is also not lost on me that when I talk about music students, I understand the historical links to a music conservatory, which again is all about going on to “work” as a professional musician (having lived that life myself).
 But the reality that every one of my conservatory friends found post-graduation is that it is really, really hard to have a “normal life” as a performing musician. 
 You can gig a lot and do a fair bit of teaching, but you often find that many of your colleagues are bank rolled by their wealthy spouses or parents. 
@@ -47,12 +51,12 @@ Or you can go on tour and basically give up your “normal life”.
 
 If you do this, you can be in the position to make a living, but it’s not exactly normal. 
 I know things are a bit different for Music Ed, but I'm more thinking about the many jobs that people with really fantastic music educations could do, but either don't know exist or have zero job preparation to get themselves that role.
-For example, the graduate student in musicology who has their finger on the pulse of the fantastic ideas in academic music study now, but would never have anything in their curricula about putting theory into practice at something like an arts organisation. 
+For example, the graduate student in musicology who has their finger on the pulse of the fantastic ideas going  around academic circles, but would never have anything in their curricula about putting theory into practice at something like an arts organisation. 
 
 I could easily imagine what a summer intensive might look like for music students (especially grad students) looking to pick up the skills they would need to go alt. 
 I am sure there are tons of major orchestras or larger arts organizations that would benefit tremendously from music students who are like what I just described, but lack the mental model as to what power tools they need to be effective. 
 Just learning basic data literacy, enough programming to wrangle data and make convincing visualizations for the board, and tools for thinking to not make rookie inferential mistakes could all be learned in a setting like this. 
-Of course how I am thinking about it takes much more of a quant focus than what would traditionally not be offered in a music school setting, but that’s kind of the point in that you’d be able to do both.
+Of course how I am thinking about it takes much more of a quant focus than what would traditionally be offered in a music school setting, but that’s kind of the point in that you’d be able to do both.
 I can’t emphasize enough how much computer and research/data literacy (not even mastery) can add value to your organization when you couple it with the pre-existing expertise you have of your domain.
 
 I am sure a small group of students who just wanted to learn these in-demand vocational skills over the summer or an alt-semester, they’d be ripe and ready by the end of it to go on and help arts organizations or work somewhere else.
@@ -71,4 +75,4 @@ I'll just end this section again here with repeating that I do not think that th
 
 Now knowing I won't be doing this next, what might I be?
 
-This takes me to [Part III of this series](https://davidjohnbaker.rbind.io/post/begin-the-future-part-iii) of me having a lot of time to think the past month, but no ability whatsoever to concentrate on my professional research.
+This takes me to [Part III of this series](https://davidjohnbaker.rbind.io/post/begin-the-future-part-iii/) of me having a lot of time to think the past month, but no ability whatsoever to concentrate on my professional research.
