--- a/content/post/2020-06-29-begin-the-fugue-part-iii.Rmd
+++ b/content/post/2020-06-29-begin-the-fugue-part-iii.Rmd
@@ -63,7 +63,8 @@ But I know that no one will pay me to do that (unless I can maybe secure some po
 
 Then lastly, going forward to my next line of work it would be really nice to have a manager who was as kind as my old manager. 
 I remember being totally dumbfounded at the idea of “onboarding” coming from an academic background (hello baptism by fire with  hidden curricula abound!).
-The amount of support and questions and effort my manager went through to get to know me as I was starting was something I will take with me if I am ever in that position. 
+The amount of support and questions and effort my manager went through to get to know me as I was starting was something I will take with me if I am ever in that position.
+Big thanks to [Ben Miller](https://www.linkedin.com/in/ben-g-miller/) for everything on that front. 
 
 Then lastly, it would be nice, but obviously not necessary to have all the perks of working in industry like having a salary that allows you to be more generous with your money, no obligation to work off the clock, free coffee and beer (that will probably never happen again), and remote work options.
 
