--- a/content/post/2020-06-29-begin-the-fugue-part-i.Rmd
+++ b/content/post/2020-06-29-begin-the-fugue-part-i.Rmd
@@ -83,6 +83,6 @@ As a result of all this rapid learning, the last major thing that I loved about 
 Of course it’s true that you’re never going to learn everything in a bootcamp, but these environments are designed to get someone from near zero to competence so they can get in their own self-directed learning feedback loops where they can start critically thinking rather than adopting a pumping them full of knowledge approach. 
 
 Now teaching in a bootcamp setting was not like anything I had taught in before.
-The goal wasn't to teach people this history of science or competing philosophies of science throughout the 20th century (though I did weave a lot of that in my lectures, not gonna lie); it was straight up about getting people the tools they need to get a job. 
+The goal wasn't to teach people the history of sciences or competing philosophies of science throughout the 20th century (though I did weave a lot of that in my lectures, not gonna lie); it was straight up about getting people the tools they need to get a job. 
 
 For this reason, I've now spent a lot of time thinking about the idea of vocationalism versus liberal arts education which I elaborate  on in [Part II](https://davidjohnbaker.rbind.io/post/begin-the-fugue-part-ii/). 
