--- a/content/post/2020-06-29-begin-the-fugue-part-ii.Rmd
+++ b/content/post/2020-06-29-begin-the-fugue-part-ii.Rmd
@@ -24,10 +24,10 @@ When the goal of the teaching is unabashedly “be useful in a neoliberal vocati
 
 I want to be very clear that I do not think that this approach should be the default goal of education (even though that is the new constant pressure), but now having experienced living in this bizarro world where success is defined solely by employment I now have a lot more opinions about the “value/values” demarcation in education.
 In many ways, I very much agree with many goals of Flatiron in that there is a huge hole in the way things are set up now for vocational job training that doesn’t fit the traditional guild/apprentice model (electrician, plumber) and there should be more opportunities for people to accomplish this if they want.
+
 This is especially true if it will lead to a marked difference in quality of life when it comes to their income.
-No one told me that working in tech can lead to such and it's especially wrong for that field to have  been dominated by white men for so long.
 This [absurdly large differences in income](https://insights.stackoverflow.com/survey/2020) has been benefiting people (white dudes) in  tech for  a long  time, and opening it up to others via education is imporant.
-t makes me very happy to have worked for a company that has made this a  priority and has allocated [scholarship money for those that are underrepresented in tech](https://flatironschool.com/access/) and to have been able to pass on those opportunities to people I know personally.
+It makes me very happy to have worked for a company that has made this a  priority and has allocated [scholarship money for those that are underrepresented in tech](https://flatironschool.com/access/) and to have been able to pass on those opportunities to people I know personally.
 
 Of course the idealist in me would go so far as to try to steer the next part of this conversation away from idea of social mobility (why don’t we just pay people all more than living wages and avoid classist ideas that value white collar above blue collar work) but the realist in me knows that this structure is entrenched in Western society right now so if there is a way to open the door to making more money and better quality of life for people through work, then people who can open that door need to open it as wide as humanly possible.
 
@@ -35,6 +35,7 @@ Of course the idealist in me would go so far as to try to steer the next part of
 
 Reflecting on the vocational versus liberal arts really has me thinking about that and what the future of what higher education could be.
 Many of my academic colleagues know the pressure of being asked to demonstrate “transferable skills” in their curricula.
+I literally was praised today for including a line in a course I plan on teaching this Winter for explicitly saying I will talk about career paths within music psychology.
 Students rightly want to be able to make a living for themselves when they graduate. 
 
 But if we just follow the job market and placements as our only metric for success, I feel as though we really betray the entire goal of education.
@@ -51,7 +52,7 @@ Or you can go on tour and basically give up your “normal life”.
 
 If you do this, you can be in the position to make a living, but it’s not exactly normal. 
 I know things are a bit different for Music Ed, but I'm more thinking about the many jobs that people with really fantastic music educations could do, but either don't know exist or have zero job preparation to get themselves that role.
-For example, the graduate student in musicology who has their finger on the pulse of the fantastic ideas going  around academic circles, but would never have anything in their curricula about putting theory into practice at something like an arts organisation. 
+For example, the graduate student in musicology who has their finger on the pulse of the fantastic ideas going  around academic circles, but would never have anything in their curricula about putting theory into practice at something like an arts organisation, let alone the connection from a professor to put them in touch with the person to get them employed. 
 
 I could easily imagine what a summer intensive might look like for music students (especially grad students) looking to pick up the skills they would need to go alt. 
 I am sure there are tons of major orchestras or larger arts organizations that would benefit tremendously from music students who are like what I just described, but lack the mental model as to what power tools they need to be effective. 
