--- a/content/post/2020-06-29-begin-the-fugue-part-i.Rmd
+++ b/content/post/2020-06-29-begin-the-fugue-part-i.Rmd
@@ -41,7 +41,7 @@ At Flatiron School, I was mainly responsible for delivering material for the fir
 
 Many of us are now also on the job market now and if you are reading this and want to pick up the scraps of a fantastic team, go add these people on LinkedIn. All you have to do is click the links below. They’re all fantastic educators and even better data scientists. 
 
-* [Wachira Ndagia](https://www.linkedin.com/in/wachirandaiga/) 
+* [Wachira Ndaiga](https://www.linkedin.com/in/wachirandaiga/) 
 * [Dan Sanz Becerril](https://www.linkedin.com/in/danielsanzbecerril/)
 * [Javi Fernandez Suarez](https://www.linkedin.com/in/javier-f-s/) 
 * [Ioana P](https://www.linkedin.com/in/ioanapr/)
