--- a/content/posts/2018-01-14-hire-me-as-a-data-scientist-part-ii/index.Rmd
+++ b/content/posts/2018-01-14-hire-me-as-a-data-scientist-part-ii/index.Rmd
@@ -26,7 +26,7 @@ Here's how I went about tackling this question.
 
 ## Popular with Super Users
 
-```{r }
+```{r , eval=FALSE}
 #=====================================================================================#
 # Following suit of the last post... 
 #=====================================================================================#
